force-app/main/default/objects/Sanctions_Search_Settings__mdt/Sanctions_Search_Settings__mdt.object-meta.xml
<CustomObject>
    <description>Settings for sanctions list lookups using sanctions.io</description>
    <label>Sanctions Search Settings</label>
    <pluralLabel>Sanctions Search Settings</pluralLabel>
</CustomObject>