force-app/main/default/objects/Sanctions_Search_Settings__mdt/fields/Access_token__c.field-meta.xml
<CustomField>
    <fullName>Access_token__c</fullName>
    <label>Access token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>