force-app/main/default/objects/Sanctions_Search_Settings__mdt/fields/Base_URL__c.field-meta.xml
<CustomField>
    <fullName>Base_URL__c</fullName>
    <description>The base URL for the api call</description>
    <inlineHelpText>The base URL for the api call</inlineHelpText>
    <label>Base URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>