force-app/main/default/objects/Sanctions_Search_Settings__mdt/fields/Recipient_email__c.field-meta.xml
<CustomField>
    <fullName>Recipient_email__c</fullName>
    <description>The email address(es) of folks who should receive notification of any hits on sanctions lists</description>
    <inlineHelpText>The email address(es) of folks who should receive notification of any hits on sanctions lists</inlineHelpText>
    <label>Recipient email</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>