force-app/main/default/objects/Sanctions_Search_Settings__mdt/fields/Sources__c.field-meta.xml
<CustomField>
    <fullName>Sources__c</fullName>
    <description>Comma-separated list of codes representing different sanctions lists</description>
    <inlineHelpText>The email address(es) of folks who should receive notification of any hits on sanctions lists</inlineHelpText>
    <label>Sources</label>
    <length>255</length>
    <type>Text</type>
</CustomField>